--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1,3 +1,20 @@
+/* Enlarged gallery card for fullscreen effect */
+.galleryCard.enlarged-card {
+  width: 98vw;
+  max-width: 98vw;
+  height: 80vh;
+  max-height: 80vh;
+  background: #eeeeee;
+  position: fixed;
+  top: 10vh;
+  left: 1vw;
+  z-index: 1001;
+  border-radius: 20px;
+  box-shadow: 0 0 60px #333;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@700;900&family=Oswald&display=swap");
 /* font-family: "Merriweather", serif;
 font-family: "Oswald", sans-serif; */
@@ -102,4 +119,30 @@ header p {
   font-size: 1rem;
 }
 
+.galleryCard.enlarged-card {
+  width: 98vw;
+  max-width: 98vw;
+  background: #eeeeee;
+  position: fixed;
+  top: 1vh;
+  left: 1vw;
+  z-index: 1001;
+  border-radius: 20px;
+  box-shadow: 0 0 60px #333;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* Enlarged image style for gallery toggle */
+.enlarged {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  box-shadow: 0 0 60px #333;
+  cursor: pointer;
+  z-index: 1002;
+}
 /*-------------------------------------------------------------------*/
